added api endpoint for updating an property and formatted the document
