# apps/api/src/property/property.controller.ts
@@ -1,5 +1,14 @@
-import { Body, Controller, Get, Param, Post, UseGuards } from '@nestjs/common';
-import { ApiOkResponse } from '@nestjs/swagger';
+import {
+  Body,
+  Controller,
+  Get,
+  HttpCode,
+  Param,
+  Patch,
+  Post,
+  UseGuards,
+} from '@nestjs/common';
+import { ApiBody, ApiOkResponse } from '@nestjs/swagger';
 import { IProperty } from '@repo/api/index';
 import { AuthGuard } from 'lib/guards/auth.guard';
 import { PropertyService } from 'lib/services/property/property.service';
@@ -8,6 +17,7 @@ import {
   PropertyResult,
   PropertyStatsResult,
   RResponse,
+  UpdatePrpopertyDto,
 } from 'lib/types/property.types';
 
 @UseGuards(AuthGuard)
@@ -28,21 +38,37 @@ export class PropertyController {
     };
   }
 
+  @ApiOkResponse({ type: PropertyResult })
+  @ApiBody({ type: UpdatePrpopertyDto })
+  @HttpCode(201)
+  @Patch('update')
+  async updateProperty(
+    @Body() data: UpdatePrpopertyDto,
+  ): Promise<PropertyResult> {
+    return (await this.propertyService.update(data)) as PropertyResult;
+  }
+
   @Get(':id')
   async get(@Param('id') id: string): Promise<PropertyResult> {
     return (await this.propertyService.getById(id)) as PropertyResult;
   }
 
-  @ApiOkResponse({type : [PropertyResult]})
+  @ApiOkResponse({ type: [PropertyResult] })
   @Get('owner/:ownerId')
-  async getByOwner(@Param('ownerId') ownerId: string): Promise<PropertyResult[]> {
+  async getByOwner(
+    @Param('ownerId') ownerId: string,
+  ): Promise<PropertyResult[]> {
     const res = await this.propertyService.getByOwnerId(ownerId);
     return res as PropertyResult[];
   }
 
-  @ApiOkResponse({ type : PropertyStatsResult })
+  @ApiOkResponse({ type: PropertyStatsResult })
   @Get('owner/stats/:ownerId')
-  async getOwnerStats(@Param('ownerId') ownerId : string ) : Promise<PropertyStatsResult>{
-    return await this.propertyService.getOwnerPropertyStats(ownerId) as PropertyStatsResult;
+  async getOwnerStats(
+    @Param('ownerId') ownerId: string,
+  ): Promise<PropertyStatsResult> {
+    return (await this.propertyService.getOwnerPropertyStats(
+      ownerId,
+    )) as PropertyStatsResult;
   }
 }
